--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <!-- displays site properly based on user's device -->
-    <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png"/>
+    <link rel="icon" type="image/png" sizes="32x32" href="/images/favicon-32x32.png"/>
     <title>Frontend Mentor | Fylo landing page with two column layout</title>
     <link rel="stylesheet" href="style.css" />
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/tailwindcss/2.2.19/tailwind.min.css" referrerpolicy="no-referrer"/>
@@ -14,7 +14,7 @@
   <body>
     <header class="flex items-center justify-between p-8 max-w-7xl mx-auto">
       <div>
-        <img src="./images/logo.svg" alt="Fylo" class="w-32 lg:w-auto" />
+        <img src="/images/logo.svg" alt="Fylo" class="w-32 lg:w-auto" />
       </div>
 
       <nav>
